--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Geo-Coder-Bing-Bulk
-version:            0.03
+version:            0.04
 abstract:           Geocode addresses in bulk with the Bing Spatial
 author:
     - gray <gray@cpan.org>
@@ -14,7 +14,7 @@ requires:
     Encode:               0
     HTTP::Request::Common:  0
     JSON:                 2
-    LWP::UserAgent:       0
+    LWP::UserAgent:       6.02
     URI:                  1.36
 resources:
     repository:  http://github.com/gray/geo-coder-bing-bulk
@@ -27,4 +27,5 @@ meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
 recommends:
-    JSON::XS:  2
+    JSON::XS:             2
+    LWP::Protocol::https:  6.02
